@@ -30,7 +30,8 @@ Use Case: As a developer I want to publish a new version to PyPI
 ================================================================
 
 - Set a new version in setup.py.
-- Set a new version in ui.py::build_title()
+- Set a new version in config.py::_PAPR_VERSION
+- Update new feature description in ui.py::show_new_features
 - make build
 - python3 -m pip install --user --upgrade twine
 - test.pypi.org
