@@ -18,8 +18,14 @@ def cursor_down(n):
     write('\033[' + str(n) + 'B')
 
 
+#def cursor_right(n):
+#    # http://tldp.org/HOWTO/Bash-Prompt-HOWTO/x361.html
+#    write('\033[' + str(n) + 'C')
+
+
 def cursor_bottom():
     write('\033[' + str(rows()) + 'B')
+    write('\033[' + str(n) + 'B')
 
 
 def cursor_top_left():
@@ -32,3 +38,12 @@ def cursor_off():
 
 def cursor_on():
     write("\x1b[?25h")
+
+
+def cursor_goto(x, y):
+    write('\033[' + str(y) + ";" + str(x) + 'H')
+
+
+def write_xy(x, y, s):
+    cursor_goto(x, y)
+    write(s)
