@@ -1,7 +1,8 @@
 0.0.18 (in progress)
-- feature: if a new version is available make this visible
+- feature: if a new version of papr is available show this at the top
 - feature: change title of a paper
 - feature: hide papers
+- feature: show changelog on first start after upgrading papr to a new version
 
 0.0.17
 - feature: call "papr config viewer <value>" to set the default viewer
